# orcaq-test

./: .dockerignore  .env.example  .gitignore  .prettierignore  AGENTS.md  Dockerfile  README.md  app.vue  docker-compose.yml  electron-builder.yml  nuxt.config.ts  package.json  todo.md  tsconfig.json
.github/agents/: copilot-instructions.md
.github/workflows/: electron-release.yml  release.yml  tauri-release.yml
SAC/: docker-compose.yml
assets/: global.css
docs/: API_REFERENCE.md  APP_UPDATE_UX_REPORT.md  ARCHITECTURE.md  BUSINESS_RULES.md  FEATURE_ANALYSIS_REPORT.md  FRONTEND_DOCUMENTATION.md  MIGRATION_GUIDE.md  STORAGE_ARCHITECTURE.md  TAURI_2_DESKTOP_PLAN.md  TAURI_AUTO_UPDATE_AUDIT_2026-03-29.md  TAURI_BUILD_AND_AUTO_UPDATE.md  bug-1-persist-store-migration-report.md  bug-2-whats-new-report.md  bug-3-drag-region-report.md  e2e-test-flow.md  electron-updater-flow-report.md
electron/: main.ts  preload.ts  recent-connections.ts  shims-vue.d.ts  tsconfig.json
layouts/: default.vue  home.vue
npx-package/: package.json
plugins/: 01.migration.client.ts  02.app-initialization.client.ts  04.tauri-runtime.client.ts  05.tauri-updater.client.ts
scripts/: build-img.sh  electron-before-build.mjs  electron-compile-dev.mjs  fix-deps.mjs  sync-version.mjs  tauri-before-build.mjs  tauri-before-dev.mjs
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/placeholder-dist/: index.html
src-tauri/src/: lib.rs  main.rs  persist.rs
types/: electron-api.d.ts  oracledb.d.ts
(+488 files in other folders)
