[package]
name = "orcaq_tauri"
version = "1.0.31"
description = "Tauri desktop shell for orcaq"
authors = ["Cinny"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "orcaq_tauri"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0", features = [] }
tauri-plugin-process = "2.3.1"
tauri-plugin-shell = "2.3.1"
tauri-plugin-store = "2.4.2"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2.10.0"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26"
objc = "0.2"
